First full set of License docs in ProseObject format. Needs checking. A Xrefs.

--- a/PrOb/licenses/Sec/_.md
+++ b/PrOb/licenses/Sec/_.md
@@ -1,61 +1,69 @@
+DAO=<a href='#_DAO.Target' class='definedterm'>DAO</a>
 
-CC0_Agreement=<a href='#Def.CC0_Agreement.Target' class='definedterm'>CC0 Agreement</a>
+Additional_Features=<a href='#_Additional_Features.Target' class='definedterm'>Additional Features</a>
 
-Creator=<a href='#Def.Creator.Target' class='definedterm'>Creator</a>
+Additional_Features.Target={_Additional_Features}
 
-NFT_Media=<a href='#Def.NFT_Media.Target' class='definedterm'>NFT Media</a>
+CC0_Agreement=<a href='#_CC0_Agreement.Target' class='definedterm'>CC0 Agreement</a>
 
-NFT=<a href='#Def.NFT.Target' class='definedterm'>NFT</a>
+Creator=<a href='#_Creator.Target' class='definedterm'>Creator</a>
 
-OFAC=<a href='#Def.OFAC.Target' class='definedterm'>OFAC</a>
+NFT_Media=<a href='#_NFT_Media.Target' class='definedterm'>NFT Media</a>
 
-Project_NFT=<a href='#Def.Project_NFT.Target' class='definedterm'>Project NFT</a>
+NFT=<a href='#_NFT.Target' class='definedterm'>NFT</a>
 
-Restricted_Parties=<a href='#Def.Restricted_Parties.Target' class='definedterm'>Restricted Parties</a>
+OFAC=<a href='#_OFAC.Target' class='definedterm'>OFAC</a>
 
-Template_Provider_Entities=<a href='#Def.Template_Provider_Entities.Target' class='definedterm'>Template Provider Entities</a>
+Project_NFT=<a href='#_Project_NFT.Target' class='definedterm'>Project NFT</a>
 
-Terms=<a href='#Def.Terms.Target' class='definedterm'>Terms</a>
+Restricted_Parties=<a href='#_Restricted_Parties.Target' class='definedterm'>Restricted Parties</a>
 
-AAA_Rules=<a href='#Def.AAA_Rules.Target' class='definedterm'>AAA Rules</a>
+Template_Provider_Entities=<a href='#_Template_Provider_Entities.Target' class='definedterm'>Template Provider Entities</a>
 
-AAA=<a href='#Def.AAA.Target' class='definedterm'>AAA</a>
+Terms=<a href='#_Terms.Target' class='definedterm'>Terms</a>
 
-Binding_Arbitration=<a href='#Def.Binding_Arbitration.Target' class='definedterm'>Binding Arbitration</a>
+AAA_Rules=<a href='#_AAA_Rules.Target' class='definedterm'>AAA Rules</a>
 
-Creator_Entities=<a href='#Def.Creator_Entities.Target' class='definedterm'>Creator Entities</a>
+AAA=<a href='#_AAA.Target' class='definedterm'>AAA</a>
 
-Creator=<a href='#Def.Creator.Target' class='definedterm'>Creator</a>
+Binding_Arbitration=<a href='#_Binding_Arbitration.Target' class='definedterm'>Binding Arbitration</a>
 
-NFT=<a href='#Def.NFT.Target' class='definedterm'>NFT</a>
+Creator_Entities=<a href='#_Creator_Entities.Target' class='definedterm'>Creator Entities</a>
 
-NFT_Media_Derivatives=<a href='#Def.NFT_Media_Derivatives.Target' class='definedterm'>NFT Media Derivatives</a>
+Creator=<a href='#_Creator.Target' class='definedterm'>Creator</a>
 
-NFT_Media=<a href='#Def.NFT_Media.Target' class='definedterm'>NFT Media</a>
+NFT=<a href='#_NFT.Target' class='definedterm'>NFT</a>
 
-Project_NFT=<a href='#Def.Project_NFT.Target' class='definedterm'>Project NFT</a>
+NFT_Media_Derivatives=<a href='#_NFT_Media_Derivatives.Target' class='definedterm'>NFT Media Derivatives</a>
 
-Terms=<a href='#Def.Terms.Target' class='definedterm'>Terms</a>
+NFT_Media=<a href='#_NFT_Media.Target' class='definedterm'>NFT Media</a>
 
-Third_Party_Content=<a href='#Def.Third_Party_Content.Target' class='definedterm'>Third Party Content</a>
+Project_NFT=<a href='#_Project_NFT.Target' class='definedterm'>Project NFT</a>
 
-Your_NFT_Media_Derivatives=<a href='#Def.Your_NFT_Media_Derivatives.Target' class='definedterm'>Your NFT Media Derivatives</a>
+Terms=<a href='#_Terms.Target' class='definedterm'>Terms</a>
 
-Other_Project_NFT_Media=<a href='#Def.Other_Project_NFT_Media.Target' class='definedterm'>Other Project NFT Media</a>
+Third_Party_Content=<a href='#_Third_Party_Content.Target' class='definedterm'>Third Party Content</a>
 
-Other_NFT_Media_Derivatives=<a href='#Def.Other_NFT_Media_Derivatives.Target' class='definedterm'>Other NFT Media Derivatives</a>
+Your_NFT_Media_Derivatives=<a href='#_Your_NFT_Media_Derivatives.Target' class='definedterm'>Your NFT Media Derivatives</a>
 
-Restricted_Party=<a href='#Def.Restricted_Parties.Target' class='definedterm'>Restricted Party</a>
+Other_Project_NFT_Media=<a href='#_Other_Project_NFT_Media.Target' class='definedterm'>Other Project NFT Media</a>
 
-Restricted_Parties=<a href='#Def.Restricted_Parties.Target' class='definedterm'>Restricted Parties</a>
+Other_NFT_Media_Derivatives=<a href='#_Other_NFT_Media_Derivatives.Target' class='definedterm'>Other NFT Media Derivatives</a>
 
-Project_Trademarks=<a href='#Def.Project_Trademarks.Target' class='definedterm'>Project Trademarks</a>
+Restricted_Party=<a href='#_Restricted_Parties.Target' class='definedterm'>Restricted Party</a>
 
-Template_Provider_Entities=<a href='#Def.Template_Provider_Entities.Target' class='definedterm'>Template Provider Entities</a>
+Restricted_Parties=<a href='#_Restricted_Parties.Target' class='definedterm'>Restricted Parties</a>
+
+Project_Trademarks=<a href='#_Project_Trademarks.Target' class='definedterm'>Project Trademarks</a>
+
+Template_Provider_Entities=<a href='#_Template_Provider_Entities.Target' class='definedterm'>Template Provider Entities</a>
 
 Note=These are the Targets where Defined Terms are defined (in line).
- 
+
 Project_Trademarks.Target={_Project_Trademarks}
+
+
+DAO.Target={_DAO}
 
 NFT.Target={_NFT}
 
@@ -73,6 +81,8 @@ Creator_Entities.Target={_Creator_Entities}
 
 AAA.Target={_AAA}
 
+CC0_Agreement.Target={_CC0_Agreement}
+
 AAA_Rules.Target={_AAA_Rules}
 
 Binding_Arbitration.Target={_Binding_Arbitration}
@@ -88,3 +98,26 @@ OFAC.Target={_OFAC}
 Restricted_Parties.Target={_Restricted_Parties}
 
 Template_Provider_Entities.Target={_Template_Provider_Entities}
+
+Note=Needed?
+
+_Additional_Features=<a href='#Def.Additional_Features.Target' class='definedterm'>Additional Features</a>
+
+Def.Additional_Features.Target={_Additional_Features}
+
+Def.Creator.Target={_Creator}
+
+Def.NFT_Media.Target={_NFT_Media}
+
+Def.NFT.Target={_NFT}
+
+Def.OFAC.Target={_OFAC}
+
+Def.Project_NFT.Target={_Project_NFT}
+
+Def.Restricted_Parties.Target={_Restricted_Parties}
+
+Def.Template_Provider_Entities.Target={_Template_Provider_Entities}
+
+Def.Terms.Target={_Terms}
+
